--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html>
 
     <head>
-        
+        <title>Fin de Mes</title>
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="style.css">
         <script src="js/calcular.js"></script>
 
