--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
         <title>Fin de Mes</title>
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="icon" href="favicon.ico">
         <link rel="stylesheet" href="style.css">
         <script src="js/calcular.js"></script>
 
@@ -49,12 +49,12 @@
             <div style="border: solid #58c29b; margin: auto; width: 22em; border-radius: 1.5em; padding-top: 1em; padding-bottom: 0.25em;
             background-color: #558ec1; border-width: 0.1em; font-size: 1.1em; text-align:center;
             background-image: linear-gradient(150deg, rgba(47,80,109,1) 0%, rgb(73 143 165) 69%, rgb(178 176 172) 100%);">
-            Gastos proyectados: 
+            Gasto proyectado: 
             <p style="display:inline" id="gastoTotal">&emsp; $ 0</p>
             
             <br>
             <br> 
-            Plata proyectada:
+            Saldo restante:
             <p style="display:inline" id="plataTotal">&emsp;    $ 0</p>
             <br><br>
             <p style="font-size:0.7em ; color:rgb(212, 215, 212)">(A fin de mes)</p>
