cambiar nombre billetera a efectivo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <option value="mercadopago">MercadoPago</option>
                 <option value="naranjax">Naranja X</option>
                 <option value="prex">Prex</option>
-                <option value="billetera">Billetera</option>
+                <option value="efectivo">Efectivo</option>
               </select>
             <br>
             <input class="input" type="number" id="billetera" value="0" size="15em" oninput="cambiarTasa(), gastoMes()">
