--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </select>
             <br>
             <input class="input" type="number" id="billetera" value="0" size="15em" oninput="cambiarTasa(), gastoMes()">
-            <p id="tasaActual" style="font-size:1em; color:rgb(178, 215, 186)">Tasa: 96.7%</p>
+            <p id="tasaActual" style="font-size:1em; color:rgb(178, 215, 186)">TNA: 96.7 %</p>
 
             <!-- <button class="button" onclick="cambiarTasa(), gastoMes()" type="button">Calcular</button>
             
