corregir tamaño perdida

--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
             
             <br>
             <br>
-
-            <p style="display:inline; color: rgb(255 171 157);">Pérdida por inflación: </p><p style="display:inline; color: rgb(255 171 157);" id="perdida">&emsp;  $0</p>
+            <p style="display:inline; font-size: 0.8em; color: rgb(255 171 157);">(Pérdida por inflación: </p><p style="display:inline; font-size: 0.8em; color: rgb(255 171 157);" id="perdida">&emsp;  $0)</p>
           
           </div>
 
