--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
             <div class="fixed"><strong>
             <a href='https://cafecito.app/findemes' rel='noopener' target='_blank'><img style="border-radius:10em; width:12em; height:auto" srcset='https://cdn.cafecito.app/imgs/buttons/button_6.png 1x, https://cdn.cafecito.app/imgs/buttons/button_6_2x.png 2x, https://cdn.cafecito.app/imgs/buttons/button_6_3.75x.png 3.75x' src='https://cdn.cafecito.app/imgs/buttons/button_6.png' alt='Invitame un café en cafecito.app' /></a>
             </strong></div>
+
+            <div class="fixedright"><strong>
+              <a href='https://instagram.com/findemes.com.ar' target='_blank'><img style="width:4em; height:auto" src='insta.png'/></a>
+              </strong></div>
             
             
     </body>
