--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
                       
             Gastás por día
             <br>
-            <input class="input" type="number" id="gastos" value="0" size="15em" oninput="cambiarTasa(), gastoMes()">
+            <input class="input" type="number" id="gastos" value="0" size="15em"  max="999999" oninput="cambiarTasa(), gastoMes()">
             <br>
 
 
             <div style="display: flex; justify-content:center;">
             <p style="font-size:0.8em; color:rgb(178, 215, 186)">Inflación diaria estimada:</p> <input class="input" type="number" id="tasainflacion" value="1"
             style="width: 2.5em; border-radius: 0.7em; font-size: 0.85em; background-color: transparent; border-width: 0;
-             text-align: right; color: rgb(178, 215, 186) ;" maxlength="7" oninput="cambiarTasa(), gastoMes()">
+             text-align: right; color: rgb(178, 215, 186) ;" oninput="cambiarTasa(), gastoMes()">
           <p style="font-size:0.8em; color:rgb(178, 215, 186)">%</p>  
           </div>
 
@@ -47,7 +47,7 @@
                 <option value="prex">Prex</option>
               </select>
             <br>
-            <input class="input" type="number" id="billetera" value="0" size="15em" maxlength="7" oninput="cambiarTasa(), gastoMes()">
+            <input class="input" type="number" id="billetera" value="0" size="15em" oninput="cambiarTasa(), gastoMes()">
             <p id="tasaActual" style="font-size:1em; color:rgb(178, 215, 186)">TNA: 96.7 %</p>
 
             <!-- <button class="button" onclick="cambiarTasa(), gastoMes()" type="button">Calcular</button>
