poner "de ahora a fin de mes"

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             background-color: #558ec1; border-width: 0.1em; font-size: 1.1em; text-align:right;
             background-image: linear-gradient(20deg, rgba(47,80,109,1) 0%, rgb(73 143 165) 69%, rgb(178 176 172) 100%);">
 
-            <p style="font-size:0.8em ; color:rgb(224, 224, 224); margin-top: 0.5em; text-align: center;">- A fin de mes -</p>
+            <p style="font-size:0.8em ; color:rgb(224, 224, 224); margin-top: 0.5em; text-align: center;">De ahora hasta fin de mes</p>
 
             <p style="display:inline; color:rgb(224, 224, 224);">Gasto proyectado &emsp;&emsp;</p>
             <p style="display:inline; color:rgb(224, 224, 224); padding-right: 1em;" id="gastoTotal">$0</p>
