--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
     </head>
 
-    <body>
+    <body onload="cambiarTasa()">
+
+    
       
       <p style="margin-top: 0.3rem; margin-bottom: 1.1em; font-size:0.85em; color:rgb(208, 208, 208)">Calculadora de gastos e inflación  🇦🇷</p>
       <img src="Titulo.png" alt="Llego a fin de mes?" style="width: 14em; height: auto; margin-bottom: 1.8em;">
