actualizar tasas y agregar personal pay

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             Tenés en <select onchange="cambiarTasa(), gastoMes()" id="cual-billetera">
                 <option value="mercadopago">MercadoPago</option>                
                 <option value="efectivo">Efectivo</option>
+                <option value="personalpay">Personal Pay</option>
                 <option value="naranjax">Naranja X</option>
                 <option value="prex">Prex</option>
               </select>
